--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 node_js:
  - "stable"
+env:
+  global:
+    - CC_TEST_REPORTER_ID=410a965e5ce79b5ffe3fd354fc74b4ed9e6fee15b84fc44a5052606a7c4f426a
 install: npm install
 script: npm test
+after_success:
+  - npm run coverage
