--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Oloyedesinmiloluwa/Maintenance_Tracker#readme",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
@@ -30,6 +31,7 @@
     "mocha": "^5.0.2",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
+    "pg-promise": "^8.4.4",
     "validator": "^9.4.1"
   },
   "devDependencies": {
