[Feature #157723452] persist modify request

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Maintenance Tracker App is an application that provides users with the ability to reach out to operations or repairs department regarding repair or maintenance requests and monitor the status of their request.",
   "main": "index.js",
   "scripts": {
-    "test": "set NODE_ENV=test&& nyc mocha ./server/src/tests/index.js --compilers js:babel-register --exit",
+    "test": "npm run migrate&&npm run seed&&set NODE_ENV=test&& nyc mocha ./server/src/tests/index.js --compilers js:babel-register --exit",
     "start:dev": "nodemon server/src/index.js --exec babel-node",
     "build": "babel ./server/src -d ./server/dist",
     "start": "node server/dist/index.js",
+    "migrate": "babel-node server/src/model/db.js",
+    "seed": "babel-node server/src/model/seed.js",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
     "heroku-postbuild": "npm run build"
   },
@@ -22,12 +24,14 @@
   },
   "homepage": "https://github.com/Oloyedesinmiloluwa/Maintenance_Tracker#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.2.1",
     "mocha": "^5.0.2",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
