--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
     "pg-promise": "^8.4.4",
+    "swagger-ui-express": "^3.0.9",
     "validator": "^9.4.1"
   },
   "devDependencies": {
