[Refactor] refactor code

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-secret_key='hiddenkey'
-testPassword='JESUS'
+secret_key='keepsecret'
+testPassword='password'
 conPort='5432'
-testUserName='postgres'
+testUserName=''
