--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "chai-http": "^3.0.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "express-validator": "^5.2.0",
+    "express-validators": "^1.0.4",
     "jsonwebtoken": "^8.2.1",
     "mocha": "^5.0.2",
     "morgan": "^1.9.0",
