feat(client): implement upload picture
- enable upload image to local
- enable upload image to cloud
- rename test files to end with .test.js

[Finishes #158409962]

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Maintenance Tracker App is an application that provides users with the ability to reach out to operations or repairs department regarding repair or maintenance requests and monitor the status of their request.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run migrate&&npm run seed&&set NODE_ENV=test&& nyc mocha ./server/src/tests/index.js --compilers js:babel-register --exit",
+    "test": "npm run migrate&&npm run seed&&set NODE_ENV=test&& nyc mocha ./server/src/tests/index.test.js --compilers js:babel-register --exit",
     "start:dev": "nodemon server/src/index.js --exec babel-node",
     "build": "babel ./server/src -d ./server/dist",
     "start": "node server/dist/index.js",
@@ -29,8 +29,10 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "cloudinary": "^1.11.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "express-fileupload": "^0.4.0",
     "express-validator": "^5.2.0",
     "express-validators": "^1.0.4",
     "jsonwebtoken": "^8.2.1",
