feat(client, server, ui): Implement password reset
- add "forgot password" interface
- enable email for password reset
- enable password reset through generated token

[Finishes #158661687]

--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,7 @@ secret_key='keepsecret'
 testPassword='password'
 conPort='5432'
 testUserName=''
+emailAdd = ''
+emailPassword = ''
+CLOUDINARY_URL= ''
 devPassword=''
