--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^8.2.1",
     "mocha": "^5.0.2",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.7",
     "pg": "^7.4.3",
     "pg-promise": "^8.4.4",
     "swagger-ui-express": "^3.0.9",
