.env sample update and environment variables config

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,22 @@
-secret_key='keepsecret'
-testPassword='password'
+secret_key='keep secret'
+testUserName='postgres server username'
+testPassword='postgres server password'
 conPort='5432'
-testUserName=''
-emailAdd = ''
-emailPassword = ''
+database: 'postgres database'
+host: 'postgres host - localhost or 127.0.0.1'
+emailAdd = 'emailaddress@domain.com'
+emailPassword = 'emailaddress password'
+emailHost = 'smtp.domain.com'
+emailPort: 587
+emailSecure = 0
+emailRequireTLS = 1
 CLOUDINARY_URL= ''
 devPassword=''
+
+
+testEmailHost: 	smtp.mailtrap.io
+testEmailUserName: 'your mailtrap username'
+testEmailPassword: 'your mailtrap password'
+testEmailPort: 465
+testEmaiSecure: false
+testEmailRequireTLS: true
