--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Maintenance Tracker App is an application that provides users with the ability to reach out to operations or repairs department regarding repair or maintenance requests and monitor the status of their request.",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack --watch",
+    "dev": "webpack-dev-server --config webpack.config.js --open --hot --history-api-fallback",
     "test": "npm run migrate&&npm run seed&&set NODE_ENV=test&& nyc mocha ./server/src/tests/index.test.js --compilers js:babel-register --require babel-polyfill --exit",
     "start:dev": "nodemon server/src/index.js --exec babel-node",
     "build": "babel ./server/src -d ./server/dist",
@@ -24,6 +26,12 @@
   },
   "homepage": "https://github.com/Oloyedesinmiloluwa/Maintenance_Tracker#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -31,27 +39,43 @@
     "chai-http": "^3.0.0",
     "cloudinary": "^1.11.0",
     "dotenv": "^5.0.1",
+    "enzyme": "^3.5.0",
     "express": "^4.16.2",
     "express-fileupload": "^0.4.0",
     "express-validator": "^5.2.0",
     "express-validators": "^1.0.4",
+    "file-loader": "^2.0.0",
     "jsonwebtoken": "^8.2.1",
     "mocha": "^5.0.2",
     "morgan": "^1.9.0",
     "nodemailer": "^4.6.7",
     "pg": "^7.4.3",
     "pg-promise": "^8.4.4",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "swagger-ui-express": "^3.0.9",
-    "validator": "^9.4.1"
+    "url-loader": "^1.1.1",
+    "validator": "^9.4.1",
+    "webpack": "^4.16.4",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "coveralls": "^3.0.1",
+    "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "nodemon": "^1.17.4",
-    "nyc": "^11.8.0"
+    "nyc": "^11.8.0",
+    "style-loader": "^0.22.1",
+    "webpack-cli": "^3.1.0"
   }
 }
