--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migrate": "babel-node server/src/model/db.js",
     "seed": "babel-node server/src/model/seed.js",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build && npm run webpack"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,7 @@
     "express-validator": "^5.2.0",
     "express-validators": "^1.0.4",
     "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.2.1",
     "mocha": "^5.0.2",
     "morgan": "^1.9.0",
