feat(signin): add signin feature
- add signin form component
- setup react
- setup redux

[Delivers #160710975]

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,11 @@
 {
-    "presets": [
-      ["env", {
-      "targets": {
-        "node": "current"
-      }
-    }]
-  ],
-    "plugins": []
-  }
+  "presets": [
+    ["env", {
+    "targets": {
+      "node": "current"
+    }
+  }], ["react"]
+],
+  "plugins": ["transform-class-properties",
+    "transform-object-rest-spread"]
+}
