--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,12 @@
 {
     "root": true,
-    "extends": "airbnb-base",
+    "extends": ["airbnb-base", "plugin:react/recommended"],
+    "plugins": ["react"],
+  "settings": {
+    "react": {
+      "version": "16.0"
+    }
+  },
     "env": {
       "node": true,
       "es6": true,
@@ -28,6 +34,13 @@
               "MethodDefinition": true,
               "ClassDeclaration": true
           }
-      }]
+      }],
+      "react/jsx-indent": [0, 2],
+      "react/jsx-curly-spacing": 2,
+      "react/jsx-boolean-value": 2,
+      "react/jsx-wrap-multilines": 2,
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "import/extensions": ["error", "as-needed"]
+
     }
 }
