--- a/package.json
+++ b/package.json
@@ -71,8 +71,12 @@
     "coveralls": "^3.0.1",
     "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "i": "^0.3.6",
     "nodemon": "^1.17.4",
     "nyc": "^11.8.0",
     "style-loader": "^0.22.1",
