--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "node server/dist/index.js",
     "migrate": "babel-node server/src/model/db.js",
     "seed": "babel-node server/src/model/seed.js",
-    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
+    "coverage": "nyc npm run client-test && nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
     "heroku-postbuild": "npm run build && npm run webpack",
     "client-test": "jest ./client --coverage"
   },
